# logi

./: CMakeLists.txt  README.md
src/: main.cpp  remote.cpp  remote.hpp  sender.cpp  sender.hpp  util.cpp  util.hpp
systemd/: logi@.service  logi@.service.in
udev/: 50-logi.rules  50-logi.rules.in
